Fixed a bug in disc&stdy/aligned profile

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -216,6 +216,10 @@ li a:hover {
   right: 10;
 }
 
+.avatar {
+  padding-left: 2.2rem;
+}
+
 /* Footer */
 
 .footer {
